add wallet translation

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -122,6 +122,8 @@
   "@amount": {},
   "amount_not_be_negative": "金额不允许为负数",
   "@amount_not_be_negative": {},
+  "amount_transfer": "",
+  "@amount_transfer": {},
   "annualized_rewards": "년간 장려금",
   "@annualized_rewards": {},
   "another": "다른",
@@ -534,6 +536,8 @@
   "@data_source_explain": {},
   "day": "일",
   "@day": {},
+  "decoded": "",
+  "@decoded": {},
   "decrypt_location_cipher_tips": "암호화 위치 문서를 디코딩(해제)하는 방법",
   "@decrypt_location_cipher_tips": {},
   "decrypt_location_cipher_tips_context": "암호화된 위치문서를 첨부한후  클릭하면 바로 디코딩(해제) 가능",
@@ -758,6 +762,8 @@
   "@exchange_from": {},
   "exchange_frozen": "동결",
   "@exchange_frozen": {},
+  "exchange_is_not_yet_open": "尚未开放{symbol}兑换",
+  "@exchange_is_not_yet_open": {},
   "exchange_latest_price": "최신 가격",
   "@exchange_latest_price": {},
   "exchange_latest_quote": "최신 교환",
@@ -800,6 +806,8 @@
   "@exchange_recharge_status_2": {},
   "exchange_sell": "매각",
   "@exchange_sell": {},
+  "exchange_soon": "",
+  "@exchange_soon": {},
   "exchange_system_bonus": "시스템 보너스",
   "@exchange_system_bonus": {},
   "exchange_to": "...까지",
@@ -922,6 +930,8 @@
   "@false_data_toast": {},
   "false_location_determination": "허위 지점 판정",
   "@false_location_determination": {},
+  "feature_available_soon": "",
+  "@feature_available_soon": {},
   "fee_rate": "费率",
   "@fee_rate": {},
   "fee_rate_trim": "费率幅度",
@@ -958,14 +968,20 @@
   "@from_address": {},
   "fund_password_error": "자금 비밀번호 오류",
   "@fund_password_error": {},
+  "gas": "",
+  "@gas": {},
   "gas_fee": "네트워크 비용",
   "@gas_fee": {},
+  "gas_limit": "",
+  "@gas_limit": {},
   "gas_limit_exceeded_hint": "비용 한도를 초과하였습니다.",
   "@gas_limit_exceeded_hint": {},
   "gas_limit_reached_hint": "비용 한도를 초과하였습니다.",
   "@gas_limit_reached_hint": {},
   "gas_limit_too_large": "燃料值过大",
   "@gas_limit_too_large": {},
+  "gas_price": "",
+  "@gas_price": {},
   "gas_price_too_low": "交易价格过低",
   "@gas_price_too_low": {},
   "gas_price_too_low_to_replace_hint": "배분 금액이 너무 낮아 교환할수가 없습니다.",
@@ -1158,6 +1174,8 @@
   "@insufficient_funds_for_gas_price_value_hint": {},
   "insufficient_funds_for_transfer_hint": "자금부족으로 계좌 이체를 할수가 없습니다.",
   "@insufficient_funds_for_transfer_hint": {},
+  "insufficient_gas_fee": "",
+  "@insufficient_gas_fee": {},
   "insufficient_gas_hint": "배분액이 부족합니다.",
   "@insufficient_gas_hint": {},
   "insufficient_gas_price_hint": "배분 금액이 부족합니다.",
@@ -1680,6 +1698,8 @@
   "@node_return_had_withdraw_finish": {},
   "node_revenue_extracted": "노드 혜택이 철회 되었습니다",
   "@node_revenue_extracted": {},
+  "node_settlement": "",
+  "@node_settlement": {},
   "no_detail_address": "상세주소 없음",
   "@no_detail_address": {},
   "node_total_staking": "Total staking amount",
@@ -1802,6 +1822,10 @@
   "@order_completed": {},
   "order_success": "성공적으로 주문",
   "@order_success": {},
+  "origin": "",
+  "@origin": {},
+  "original_ether_start_with_zerox": "",
+  "@original_ether_start_with_zerox": {},
   "other_area": "기타 국가",
   "@other_area": {},
   "outdoor": "실외",
@@ -1958,6 +1982,14 @@
   "@precautions": {},
   "preset_for_next_period": "Preset for the renewal node ",
   "@preset_for_next_period": {},
+  "preset_next_do_not_follow": "",
+  "@preset_next_do_not_follow": {},
+  "preset_next_follow_renew": "",
+  "@preset_next_follow_renew": {},
+  "preset_next_node_renew": "",
+  "@preset_next_node_renew": {},
+  "preset_next_stop_renew": "",
+  "@preset_next_stop_renew": {},
   "price": "가격",
   "@price": {},
   "price_market": "가격({market})",
@@ -1996,6 +2028,8 @@
   "@punch_card_completed_came_tomorrow": {},
   "qrcode": "QR코드번호",
   "@qrcode": {},
+  "random_number": "",
+  "@random_number": {},
   "reactivate": "重新激活",
   "@reactivate": {},
   "reason_obstacles_sign_rate_withdrawn_mortgage": "(可能的原因是设备运行障碍/设备出块签名率低/节点主已经退出抵押)",
@@ -2082,6 +2116,8 @@
   "@revoke": {},
   "revoking": "취소중입니다.",
   "@revoking": {},
+  "reward": "",
+  "@reward": {},
   "reward_comes_from_pow_and_pos": "Rewards are from Map3 PoW and Atlas PoS",
   "@reward_comes_from_pow_and_pos": {},
   "reward_detailed_introduction": "Rewards details",
@@ -2374,6 +2410,8 @@
   "@today_join": {},
   "toilet": "화장실",
   "@toilet": {},
+  "to_map3": "",
+  "@to_map3": {},
   "too_many_fail_biometrics_unavailable": "실패횟수가 한도를 초과하였습니다.현재 생물인식을 사용할수 없습니다.",
   "@too_many_fail_biometrics_unavailable": {},
   "too_many_fail_try_again": "실패 횟수가 한도를 초과하였습니다.잠시후 다시 시도해주십시요.",
@@ -2392,8 +2430,12 @@
   "@transaction_contained_within_pool": {},
   "transaction_detail_state_func": "확인{transactionDetailState}회",
   "@transaction_detail_state_func": {},
+  "transaction_gas_fee": "",
+  "@transaction_gas_fee": {},
   "transaction_limit_reached_hint": "거래 한도를 초과하였습니다.",
   "@transaction_limit_reached_hint": {},
+  "transaction_location": "",
+  "@transaction_location": {},
   "transaction_value_disable": "转账价值为负数",
   "@transaction_value_disable": {},
   "transfer": "Transfer",
