--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -122,6 +122,8 @@
   "@amount": {},
   "amount_not_be_negative": "The amount can not be negative",
   "@amount_not_be_negative": {},
+  "amount_transfer": "",
+  "@amount_transfer": {},
   "annualized_rewards": "APR",
   "@annualized_rewards": {},
   "another": "Refresh",
@@ -534,6 +536,8 @@
   "@data_source_explain": {},
   "day": "Day",
   "@day": {},
+  "decoded": "Decoded",
+  "@decoded": {},
   "decrypt_location_cipher_tips": "How to decipher coded location information？",
   "@decrypt_location_cipher_tips": {},
   "decrypt_location_cipher_tips_context": "Please paste the location code, and click enter to decode.",
@@ -758,6 +762,8 @@
   "@exchange_from": {},
   "exchange_frozen": "Frozen",
   "@exchange_frozen": {},
+  "exchange_is_not_yet_open": "尚未开放{symbol}兑换",
+  "@exchange_is_not_yet_open": {},
   "exchange_latest_price": " Last Price",
   "@exchange_latest_price": {},
   "exchange_latest_quote": "Latest Trading",
@@ -800,6 +806,8 @@
   "@exchange_recharge_status_2": {},
   "exchange_sell": "Sell",
   "@exchange_sell": {},
+  "exchange_soon": "",
+  "@exchange_soon": {},
   "exchange_system_bonus": "System Bonus",
   "@exchange_system_bonus": {},
   "exchange_to": "To",
@@ -922,6 +930,8 @@
   "@false_data_toast": {},
   "false_location_determination": "False POI verification ",
   "@false_location_determination": {},
+  "feature_available_soon": "",
+  "@feature_available_soon": {},
   "fee_rate": "Fee rate",
   "@fee_rate": {},
   "fee_rate_trim": "Rate range",
@@ -958,14 +968,20 @@
   "@from_address": {},
   "fund_password_error": "Fund password error",
   "@fund_password_error": {},
+  "gas": "Gas",
+  "@gas": {},
   "gas_fee": "Transaction Fee",
   "@gas_fee": {},
+  "gas_limit": "",
+  "@gas_limit": {},
   "gas_limit_exceeded_hint": "Gas limit exceeded.",
   "@gas_limit_exceeded_hint": {},
   "gas_limit_reached_hint": "gas limit reached",
   "@gas_limit_reached_hint": {},
   "gas_limit_too_large": "Gas fee exceeds the limit",
   "@gas_limit_too_large": {},
+  "gas_price": "",
+  "@gas_price": {},
   "gas_price_too_low": "Gas fee is too low",
   "@gas_price_too_low": {},
   "gas_price_too_low_to_replace_hint": "Gas price too low to replace",
@@ -1158,6 +1174,8 @@
   "@insufficient_funds_for_gas_price_value_hint": {},
   "insufficient_funds_for_transfer_hint": "insufficient funds for transfer",
   "@insufficient_funds_for_transfer_hint": {},
+  "insufficient_gas_fee": "",
+  "@insufficient_gas_fee": {},
   "insufficient_gas_hint": "Insufficient gas.",
   "@insufficient_gas_hint": {},
   "insufficient_gas_price_hint": "Insufficient gas price.",
@@ -1680,6 +1698,8 @@
   "@node_return_had_withdraw_finish": {},
   "node_revenue_extracted": "Reward withdrawal completes",
   "@node_revenue_extracted": {},
+  "node_settlement": "",
+  "@node_settlement": {},
   "no_detail_address": "No detailed address",
   "@no_detail_address": {},
   "node_total_staking": "Total staking amount",
@@ -1802,6 +1822,10 @@
   "@order_completed": {},
   "order_success": "Finished",
   "@order_success": {},
+  "origin": "Origin",
+  "@origin": {},
+  "original_ether_start_with_zerox": "",
+  "@original_ether_start_with_zerox": {},
   "other_area": "Others",
   "@other_area": {},
   "outdoor": "Outdoor",
@@ -1958,6 +1982,14 @@
   "@precautions": {},
   "preset_for_next_period": "Preset for the renewal node ",
   "@preset_for_next_period": {},
+  "preset_next_do_not_follow": "",
+  "@preset_next_do_not_follow": {},
+  "preset_next_follow_renew": "",
+  "@preset_next_follow_renew": {},
+  "preset_next_node_renew": "",
+  "@preset_next_node_renew": {},
+  "preset_next_stop_renew": "",
+  "@preset_next_stop_renew": {},
   "price": "Price",
   "@price": {},
   "price_market": "Price({market})",
@@ -1996,6 +2028,8 @@
   "@punch_card_completed_came_tomorrow": {},
   "qrcode": "QR Code",
   "@qrcode": {},
+  "random_number": "",
+  "@random_number": {},
   "reactivate": "Reinitiate",
   "@reactivate": {},
   "reason_obstacles_sign_rate_withdrawn_mortgage": "Possible reason is device error/low signature rate/the initiator retrives his delegations",
@@ -2082,6 +2116,8 @@
   "@revoke": {},
   "revoking": "Cancelling",
   "@revoking": {},
+  "reward": "",
+  "@reward": {},
   "reward_comes_from_pow_and_pos": "Rewards are from Map3 PoW and Atlas PoS",
   "@reward_comes_from_pow_and_pos": {},
   "reward_detailed_introduction": "Rewards details",
@@ -2374,6 +2410,8 @@
   "@today_join": {},
   "toilet": "Toilet",
   "@toilet": {},
+  "to_map3": "",
+  "@to_map3": {},
   "too_many_fail_biometrics_unavailable": "Failed too many times, biometrics unavailable",
   "@too_many_fail_biometrics_unavailable": {},
   "too_many_fail_try_again": "Failed too many times, please try again later",
@@ -2392,8 +2430,12 @@
   "@transaction_contained_within_pool": {},
   "transaction_detail_state_func": "Confirm {transactionDetailState} times",
   "@transaction_detail_state_func": {},
+  "transaction_gas_fee": "",
+  "@transaction_gas_fee": {},
   "transaction_limit_reached_hint": "Transaction limit reached",
   "@transaction_limit_reached_hint": {},
+  "transaction_location": "",
+  "@transaction_location": {},
   "transaction_value_disable": "negative value",
   "@transaction_value_disable": {},
   "transfer": "Transfer",
