--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -122,6 +122,8 @@
   "@amount": {},
   "amount_not_be_negative": "金额不允许为负数",
   "@amount_not_be_negative": {},
+  "amount_transfer": "金额转移",
+  "@amount_transfer": {},
   "annualized_rewards": "年化奖励",
   "@annualized_rewards": {},
   "another": "换一个",
@@ -534,6 +536,8 @@
   "@data_source_explain": {},
   "day": "日",
   "@day": {},
+  "decoded": "解码",
+  "@decoded": {},
   "decrypt_location_cipher_tips": "怎么解码位置密文？",
   "@decrypt_location_cipher_tips": {},
   "decrypt_location_cipher_tips_context": "请粘贴位置密文，点击搜索即可解码密文。",
@@ -758,6 +762,8 @@
   "@exchange_from": {},
   "exchange_frozen": "冻结",
   "@exchange_frozen": {},
+  "exchange_is_not_yet_open": "尚未开放{symbol}兑换",
+  "@exchange_is_not_yet_open": {},
   "exchange_latest_price": "最新价",
   "@exchange_latest_price": {},
   "exchange_latest_quote": "最新兑换",
@@ -800,6 +806,8 @@
   "@exchange_recharge_status_2": {},
   "exchange_sell": "卖出",
   "@exchange_sell": {},
+  "exchange_soon": "即将开放兑换",
+  "@exchange_soon": {},
   "exchange_system_bonus": "系统赠币",
   "@exchange_system_bonus": {},
   "exchange_to": "到",
@@ -922,6 +930,8 @@
   "@false_data_toast": {},
   "false_location_determination": "虚假地点判定",
   "@false_location_determination": {},
+  "feature_available_soon": "该功能即将开放",
+  "@feature_available_soon": {},
   "fee_rate": "费率",
   "@fee_rate": {},
   "fee_rate_trim": "费率幅度",
@@ -958,14 +968,20 @@
   "@from_address": {},
   "fund_password_error": "资金密码错误",
   "@fund_password_error": {},
+  "gas": "燃料",
+  "@gas": {},
   "gas_fee": "网络费用",
   "@gas_fee": {},
+  "gas_limit": "燃料限制",
+  "@gas_limit": {},
   "gas_limit_exceeded_hint": "Gas总量不足.",
   "@gas_limit_exceeded_hint": {},
   "gas_limit_reached_hint": "Gas超过区块限制",
   "@gas_limit_reached_hint": {},
   "gas_limit_too_large": "燃料值过大",
   "@gas_limit_too_large": {},
+  "gas_price": "燃料价格",
+  "@gas_price": {},
   "gas_price_too_low": "交易价格过低",
   "@gas_price_too_low": {},
   "gas_price_too_low_to_replace_hint": "Gas价格太低不足以覆盖交易",
@@ -1158,6 +1174,8 @@
   "@insufficient_funds_for_gas_price_value_hint": {},
   "insufficient_funds_for_transfer_hint": "转账资金不足",
   "@insufficient_funds_for_transfer_hint": {},
+  "insufficient_gas_fee": "燃料费不足",
+  "@insufficient_gas_fee": {},
   "insufficient_gas_hint": "Gas不足.",
   "@insufficient_gas_hint": {},
   "insufficient_gas_price_hint": "Gas价格过低.",
@@ -1680,6 +1698,8 @@
   "@node_return_had_withdraw_finish": {},
   "node_revenue_extracted": "节点收益已经提取完成。",
   "@node_revenue_extracted": {},
+  "node_settlement": "节点结算",
+  "@node_settlement": {},
   "no_detail_address": "暂无详细地址",
   "@no_detail_address": {},
   "node_total_staking": "节点总抵押",
@@ -1802,6 +1822,10 @@
   "@order_completed": {},
   "order_success": "下单成功",
   "@order_success": {},
+  "origin": "原始",
+  "@origin": {},
+  "original_ether_start_with_zerox": "原以太链0X开头",
+  "@original_ether_start_with_zerox": {},
   "other_area": "其他地区",
   "@other_area": {},
   "outdoor": "室外",
@@ -1958,6 +1982,14 @@
   "@precautions": {},
   "preset_for_next_period": "下期预设",
   "@preset_for_next_period": {},
+  "preset_next_do_not_follow": "下期预设，不跟随",
+  "@preset_next_do_not_follow": {},
+  "preset_next_follow_renew": "下期预设，跟随续约",
+  "@preset_next_follow_renew": {},
+  "preset_next_node_renew": "下期预设，节点续约",
+  "@preset_next_node_renew": {},
+  "preset_next_stop_renew": "下期预设，停止续约",
+  "@preset_next_stop_renew": {},
   "price": "价格",
   "@price": {},
   "price_market": "价格({market})",
@@ -1996,6 +2028,8 @@
   "@punch_card_completed_came_tomorrow": {},
   "qrcode": "二维码",
   "@qrcode": {},
+  "random_number": "随机数",
+  "@random_number": {},
   "reactivate": "重新激活",
   "@reactivate": {},
   "reason_obstacles_sign_rate_withdrawn_mortgage": "(可能的原因是设备运行障碍/设备出块签名率低/节点主已经退出抵押)",
@@ -2082,6 +2116,8 @@
   "@revoke": {},
   "revoking": "撤销中",
   "@revoking": {},
+  "reward": "奖励",
+  "@reward": {},
   "reward_comes_from_pow_and_pos": "节点收益来自map3服务工作量证明和参与atlas权益共识出块证明",
   "@reward_comes_from_pow_and_pos": {},
   "reward_detailed_introduction": "收益详细介绍",
@@ -2374,6 +2410,8 @@
   "@today_join": {},
   "toilet": "厕所",
   "@toilet": {},
+  "to_map3": "至Map3",
+  "@to_map3": {},
   "too_many_fail_biometrics_unavailable": "失败次数过多，生物识别暂不可用",
   "@too_many_fail_biometrics_unavailable": {},
   "too_many_fail_try_again": "失败次数过多，请稍后重试",
@@ -2392,8 +2430,12 @@
   "@transaction_contained_within_pool": {},
   "transaction_detail_state_func": "确认{transactionDetailState}次",
   "@transaction_detail_state_func": {},
+  "transaction_gas_fee": "交易燃料费用",
+  "@transaction_gas_fee": {},
   "transaction_limit_reached_hint": "达到交易次数上限",
   "@transaction_limit_reached_hint": {},
+  "transaction_location": "交易位置",
+  "@transaction_location": {},
   "transaction_value_disable": "转账价值为负数",
   "@transaction_value_disable": {},
   "transfer": "转账",
