--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -122,6 +122,8 @@
   "@amount": {},
   "amount_not_be_negative": "金额不允许为负数",
   "@amount_not_be_negative": {},
+  "amount_transfer": "",
+  "@amount_transfer": {},
   "annualized_rewards": "年化獎勵",
   "@annualized_rewards": {},
   "another": "換壹個",
@@ -534,6 +536,8 @@
   "@data_source_explain": {},
   "day": "日",
   "@day": {},
+  "decoded": "",
+  "@decoded": {},
   "decrypt_location_cipher_tips": "怎麼解碼位置密文？",
   "@decrypt_location_cipher_tips": {},
   "decrypt_location_cipher_tips_context": "請粘貼位置密文，點擊搜索即可解碼密文。",
@@ -758,6 +762,8 @@
   "@exchange_from": {},
   "exchange_frozen": "冻结",
   "@exchange_frozen": {},
+  "exchange_is_not_yet_open": "尚未开放{symbol}兑换",
+  "@exchange_is_not_yet_open": {},
   "exchange_latest_price": "最新价",
   "@exchange_latest_price": {},
   "exchange_latest_quote": "最新兑换",
@@ -800,6 +806,8 @@
   "@exchange_recharge_status_2": {},
   "exchange_sell": "卖出",
   "@exchange_sell": {},
+  "exchange_soon": "",
+  "@exchange_soon": {},
   "exchange_system_bonus": "系统赠币",
   "@exchange_system_bonus": {},
   "exchange_to": "到",
@@ -922,6 +930,8 @@
   "@false_data_toast": {},
   "false_location_determination": "虛假地點判定",
   "@false_location_determination": {},
+  "feature_available_soon": "",
+  "@feature_available_soon": {},
   "fee_rate": "费率",
   "@fee_rate": {},
   "fee_rate_trim": "费率幅度",
@@ -958,14 +968,20 @@
   "@from_address": {},
   "fund_password_error": "資金密碼錯誤",
   "@fund_password_error": {},
+  "gas": "",
+  "@gas": {},
   "gas_fee": "網絡費用",
   "@gas_fee": {},
+  "gas_limit": "",
+  "@gas_limit": {},
   "gas_limit_exceeded_hint": "Gas總量不足.",
   "@gas_limit_exceeded_hint": {},
   "gas_limit_reached_hint": "Gas超過區塊限制",
   "@gas_limit_reached_hint": {},
   "gas_limit_too_large": "燃料值过大",
   "@gas_limit_too_large": {},
+  "gas_price": "",
+  "@gas_price": {},
   "gas_price_too_low": "交易价格过低",
   "@gas_price_too_low": {},
   "gas_price_too_low_to_replace_hint": "Gas價格太低不足以覆蓋交易",
@@ -1158,6 +1174,8 @@
   "@insufficient_funds_for_gas_price_value_hint": {},
   "insufficient_funds_for_transfer_hint": "轉賬資金不足",
   "@insufficient_funds_for_transfer_hint": {},
+  "insufficient_gas_fee": "",
+  "@insufficient_gas_fee": {},
   "insufficient_gas_hint": "Gas不足.",
   "@insufficient_gas_hint": {},
   "insufficient_gas_price_hint": "Gas價格過低.",
@@ -1680,6 +1698,8 @@
   "@node_return_had_withdraw_finish": {},
   "node_revenue_extracted": "節點收益已經提取完成。",
   "@node_revenue_extracted": {},
+  "node_settlement": "",
+  "@node_settlement": {},
   "no_detail_address": "暫無詳細地址",
   "@no_detail_address": {},
   "node_total_staking": "节点总抵押",
@@ -1802,6 +1822,10 @@
   "@order_completed": {},
   "order_success": "下單成功",
   "@order_success": {},
+  "origin": "",
+  "@origin": {},
+  "original_ether_start_with_zerox": "",
+  "@original_ether_start_with_zerox": {},
   "other_area": "其他地區",
   "@other_area": {},
   "outdoor": "室外",
@@ -1958,6 +1982,14 @@
   "@precautions": {},
   "preset_for_next_period": "下期预设",
   "@preset_for_next_period": {},
+  "preset_next_do_not_follow": "",
+  "@preset_next_do_not_follow": {},
+  "preset_next_follow_renew": "",
+  "@preset_next_follow_renew": {},
+  "preset_next_node_renew": "",
+  "@preset_next_node_renew": {},
+  "preset_next_stop_renew": "",
+  "@preset_next_stop_renew": {},
   "price": "价格",
   "@price": {},
   "price_market": "价格({market})",
@@ -1996,6 +2028,8 @@
   "@punch_card_completed_came_tomorrow": {},
   "qrcode": "二維碼",
   "@qrcode": {},
+  "random_number": "",
+  "@random_number": {},
   "reactivate": "重新激活",
   "@reactivate": {},
   "reason_obstacles_sign_rate_withdrawn_mortgage": "(可能的原因是设备运行障碍/设备出块签名率低/节点主已经退出抵押)",
@@ -2082,6 +2116,8 @@
   "@revoke": {},
   "revoking": "撤销中",
   "@revoking": {},
+  "reward": "",
+  "@reward": {},
   "reward_comes_from_pow_and_pos": "节点收益来自map3服务工作量证明和参与atlas权益共识出块证明",
   "@reward_comes_from_pow_and_pos": {},
   "reward_detailed_introduction": "收益详细介绍",
@@ -2374,6 +2410,8 @@
   "@today_join": {},
   "toilet": "廁所",
   "@toilet": {},
+  "to_map3": "",
+  "@to_map3": {},
   "too_many_fail_biometrics_unavailable": "失敗次數過多，生物識別暫不可用",
   "@too_many_fail_biometrics_unavailable": {},
   "too_many_fail_try_again": "失敗次數過多，請稍後重試",
@@ -2392,8 +2430,12 @@
   "@transaction_contained_within_pool": {},
   "transaction_detail_state_func": "確認{transactionDetailState}次",
   "@transaction_detail_state_func": {},
+  "transaction_gas_fee": "",
+  "@transaction_gas_fee": {},
   "transaction_limit_reached_hint": "達到交易次數上限",
   "@transaction_limit_reached_hint": {},
+  "transaction_location": "",
+  "@transaction_location": {},
   "transaction_value_disable": "转账价值为负数",
   "@transaction_value_disable": {},
   "transfer": "轉賬",
