add rp translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -498,6 +498,8 @@
   "@create_wallet": {},
   "create_wallet_account_check_contract": "Create/import wallet to check contract details",
   "@create_wallet_account_check_contract": {},
+  "create_wallet_auto_friend_create_now": "现在新建一个钱包身份，创建后将自动成为{walletName}的好友，现在就创建吗?",
+  "@create_wallet_auto_friend_create_now": {},
   "create_wallet_name_label": "Wallet Name",
   "@create_wallet_name_label": {},
   "create_wallet_password_label": "Wallet Password",
@@ -1202,8 +1204,14 @@
   "@invest_cant_undo": {},
   "invitation_code_error": "Invitation code error",
   "@invitation_code_error": {},
+  "invitation_success": "",
+  "@invitation_success": {},
   "invite_friend_join": "Invite friends to join",
   "@invite_friend_join": {},
+  "invite_friend_receive_pocket_agree": "",
+  "@invite_friend_receive_pocket_agree": {},
+  "invite_friends": "",
+  "@invite_friends": {},
   "is_not_map3_operator": "invalid map3 node initiator",
   "@is_not_map3_operator": {},
   "isnt_trustwallet_cant_export": "Not TrustWallet，unsupportive to mnemonic",
@@ -2062,6 +2070,8 @@
   "@recovered_invested_capital": {},
   "redelegation_not_exist": "redelegation does not exist",
   "@redelegation_not_exist": {},
+  "red_pocket_invitation_together": "",
+  "@red_pocket_invitation_together": {},
   "refresh_keypaire_message": "Refreshing your public key address will fail to decrypt the received address, still continue to refresh?",
   "@refresh_keypaire_message": {},
   "refresh_public_key_days_tips": "Automatically refresh in %d days",
