--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -498,6 +498,8 @@
   "@create_wallet": {},
   "create_wallet_account_check_contract": "你需要先创建/导入钱包账户，才能查看你的钱包账户相关节点数据。",
   "@create_wallet_account_check_contract": {},
+  "create_wallet_auto_friend_create_now": "现在新建一个钱包身份，创建后将自动成为{walletName}的好友，现在就创建吗?",
+  "@create_wallet_auto_friend_create_now": {},
   "create_wallet_name_label": "钱包名称",
   "@create_wallet_name_label": {},
   "create_wallet_password_label": "钱包密码",
@@ -1202,8 +1204,14 @@
   "@invest_cant_undo": {},
   "invitation_code_error": "邀请码错误",
   "@invitation_code_error": {},
+  "invitation_success": "邀请成功",
+  "@invitation_success": {},
   "invite_friend_join": "邀请好友\n参加",
   "@invite_friend_join": {},
+  "invite_friend_receive_pocket_agree": "邀请你成为他的好友并一起领红包，是否同意?",
+  "@invite_friend_receive_pocket_agree": {},
+  "invite_friends": "邀请好友",
+  "@invite_friends": {},
   "is_not_map3_operator": "非Map3创建人",
   "@is_not_map3_operator": {},
   "isnt_trustwallet_cant_export": "不是TrustWallet钱包，不支持导出助记词",
@@ -2062,6 +2070,8 @@
   "@recovered_invested_capital": {},
   "redelegation_not_exist": "复抵押不存在",
   "@redelegation_not_exist": {},
+  "red_pocket_invitation_together": "一起领红包邀请",
+  "@red_pocket_invitation_together": {},
   "refresh_keypaire_message": "刷新公钥地址后，之前的接收的位置密文将永久解密不了！确定继续刷新吗？",
   "@refresh_keypaire_message": {},
   "refresh_public_key_days_tips": "%d天后自动刷新",
