--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -498,6 +498,8 @@
   "@create_wallet": {},
   "create_wallet_account_check_contract": "妳需要先創建/導入錢包賬戶，才能查看妳的錢包賬戶相關節點數據。",
   "@create_wallet_account_check_contract": {},
+  "create_wallet_auto_friend_create_now": "现在新建一个钱包身份，创建后将自动成为{walletName}的好友，现在就创建吗?",
+  "@create_wallet_auto_friend_create_now": {},
   "create_wallet_name_label": "錢包名稱",
   "@create_wallet_name_label": {},
   "create_wallet_password_label": "錢包密碼",
@@ -1202,8 +1204,14 @@
   "@invest_cant_undo": {},
   "invitation_code_error": "邀請碼錯誤",
   "@invitation_code_error": {},
+  "invitation_success": "",
+  "@invitation_success": {},
   "invite_friend_join": "邀請好友\n參加",
   "@invite_friend_join": {},
+  "invite_friend_receive_pocket_agree": "",
+  "@invite_friend_receive_pocket_agree": {},
+  "invite_friends": "",
+  "@invite_friends": {},
   "is_not_map3_operator": "非Map3创建人",
   "@is_not_map3_operator": {},
   "isnt_trustwallet_cant_export": "不是TrustWallet錢包，不支持導出助記詞",
@@ -2062,6 +2070,8 @@
   "@recovered_invested_capital": {},
   "redelegation_not_exist": "复抵押不存在",
   "@redelegation_not_exist": {},
+  "red_pocket_invitation_together": "",
+  "@red_pocket_invitation_together": {},
   "refresh_keypaire_message": "刷新公鑰地址後，之前的接收的位置密文將永久解密不了！確定繼續刷新嗎？",
   "@refresh_keypaire_message": {},
   "refresh_public_key_days_tips": "%d天後自動刷新",
