--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -498,6 +498,8 @@
   "@create_wallet": {},
   "create_wallet_account_check_contract": "당신은 지갑 계정 새로 만들기/가져오기를 우선적으로 해야만이 지갑 계정과 관련된 노드 데이터를 찾아볼수 있습니다.",
   "@create_wallet_account_check_contract": {},
+  "create_wallet_auto_friend_create_now": "现在新建一个钱包身份，创建后将自动成为{walletName}的好友，现在就创建吗?",
+  "@create_wallet_auto_friend_create_now": {},
   "create_wallet_name_label": "비공개 개인 지갑 명칭 만들기",
   "@create_wallet_name_label": {},
   "create_wallet_password_label": "지갑 비밀번호 만들기",
@@ -1202,8 +1204,14 @@
   "@invest_cant_undo": {},
   "invitation_code_error": "초대 코드 오류",
   "@invitation_code_error": {},
+  "invitation_success": "",
+  "@invitation_success": {},
   "invite_friend_join": "참가할 친구 초대",
   "@invite_friend_join": {},
+  "invite_friend_receive_pocket_agree": "",
+  "@invite_friend_receive_pocket_agree": {},
+  "invite_friends": "",
+  "@invite_friends": {},
   "is_not_map3_operator": "非Map3创建人",
   "@is_not_map3_operator": {},
   "isnt_trustwallet_cant_export": "TrustWallet 지갑이 아니므로 도움말 가져오기를 지원할수 없습니다.",
@@ -2062,6 +2070,8 @@
   "@recovered_invested_capital": {},
   "redelegation_not_exist": "复抵押不存在",
   "@redelegation_not_exist": {},
+  "red_pocket_invitation_together": "",
+  "@red_pocket_invitation_together": {},
   "refresh_keypaire_message": "공유 키 주소를 새로 고침 하면  이전에 받았던 위치의 암호화 문서는 영구적으로 복구 되지 않습니다!  새로 고침을 계속 하시겠습니까? ",
   "@refresh_keypaire_message": {},
   "refresh_public_key_days_tips": "%d 후 자동 새로 고침",
