[rp]: add translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -498,6 +498,8 @@
   "@create_wallet": {},
   "create_wallet_account_check_contract": "Create/import wallet to check contract details",
   "@create_wallet_account_check_contract": {},
+  "create_wallet_auto_friend_create_now": "现在新建一个钱包身份，创建后将自动成为{walletName}的好友，现在就创建吗?",
+  "@create_wallet_auto_friend_create_now": {},
   "create_wallet_name_label": "Wallet Name",
   "@create_wallet_name_label": {},
   "create_wallet_password_label": "Wallet Password",
@@ -1202,8 +1204,14 @@
   "@invest_cant_undo": {},
   "invitation_code_error": "Invitation code error",
   "@invitation_code_error": {},
+  "invitation_success": "",
+  "@invitation_success": {},
   "invite_friend_join": "Invite friends to join",
   "@invite_friend_join": {},
+  "invite_friend_receive_pocket_agree": "",
+  "@invite_friend_receive_pocket_agree": {},
+  "invite_friends": "",
+  "@invite_friends": {},
   "is_not_map3_operator": "invalid map3 node initiator",
   "@is_not_map3_operator": {},
   "isnt_trustwallet_cant_export": "Not TrustWallet，unsupportive to mnemonic",
@@ -1380,6 +1388,8 @@
   "@map3_create_min_staking": {},
   "map3_creator_delegation_too_small": "The amount of Map3 delegation is too low",
   "@map3_creator_delegation_too_small": {},
+  "map3_current_reward": "",
+  "@map3_current_reward": {},
   "map3_delegate_amount_hint": " {startMin}HYN are required before initiating. Each delegation is not less{delegateMin}HYN",
   "@map3_delegate_amount_hint": {},
   "map3_delegate_doing": "抵押{amount}HYN请求处理中...",
@@ -1404,6 +1414,10 @@
   "@map3_introduction": {},
   "map3_is_mortgaged": "Map3 has been staked",
   "@map3_is_mortgaged": {},
+  "map3_join_delegate_address_is_empty_hint": "",
+  "@map3_join_delegate_address_is_empty_hint": {},
+  "map3_join_total_count": "共 {length}个",
+  "@map3_join_total_count": {},
   "map3_main_page_title": "Map3 nodes",
   "@map3_main_page_title": {},
   "map3_manage_fee_rule": "Commission is pro rata to the amount of delegation(delegation / {amount} x 100%）commission is not higher than{feeMax}%",
@@ -1414,18 +1428,50 @@
   "@map3_node": {},
   "map3_node_already_restaked": "map3 node already restaked",
   "@map3_node_already_restaked": {},
+  "map3_node_cancel_staking": "",
+  "@map3_node_cancel_staking": {},
+  "map3_node_delegate": "",
+  "@map3_node_delegate": {},
+  "map3_node_device": "",
+  "@map3_node_device": {},
+  "map3_node_edit": "",
+  "@map3_node_edit": {},
+  "map3_node_exit": "",
+  "@map3_node_exit": {},
   "map3_node_identity_exists": "map3 node identity exists",
   "@map3_node_identity_exists": {},
   "map3_node_introduction": "Map3",
   "@map3_node_introduction": {},
   "map3_node_key_exists": "Map3 BLS key is duplicate",
   "@map3_node_key_exists": {},
+  "map3_node_no_action_hint": "",
+  "@map3_node_no_action_hint": {},
   "map3_node_no_exist": "map3 node does not exist",
   "@map3_node_no_exist": {},
+  "map3_node_notification": "",
+  "@map3_node_notification": {},
+  "map3_node_notification_default": "",
+  "@map3_node_notification_default": {},
+  "map3_node_progress": "",
+  "@map3_node_progress": {},
+  "map3_node_record_is_empty": "",
+  "@map3_node_record_is_empty": {},
+  "map3_node_re_staking_hint": "",
+  "@map3_node_re_staking_hint": {},
+  "map3_node_re_staking_ing": "",
+  "@map3_node_re_staking_ing": {},
+  "map3_node_re_staking_title": "",
+  "@map3_node_re_staking_title": {},
   "map3_nodes": "Map3 nodes",
   "@map3_nodes": {},
+  "map3_node_service": "",
+  "@map3_node_service": {},
+  "map3_node_setting_now": "",
+  "@map3_node_setting_now": {},
   "map3_nodes_v1": "Map3 node（v1.0）",
   "@map3_nodes_v1": {},
+  "map3_node_un_staking": "",
+  "@map3_node_un_staking": {},
   "map3_notification_expired": "",
   "@map3_notification_expired": {},
   "map3_notification_expired_left_epoch": "距离到期还需{endRemainEpochValue}纪元",
@@ -1446,8 +1492,40 @@
   "@map3_re_delegate_doing": {},
   "map3_refresh_data": "",
   "@map3_refresh_data": {},
+  "map3_renew": "",
+  "@map3_renew": {},
+  "map3_renew_auto": "",
+  "@map3_renew_auto": {},
+  "map3_renew_content_creator": "",
+  "@map3_renew_content_creator": {},
+  "map3_renew_content_joiner": "",
+  "@map3_renew_content_joiner": {},
+  "map3_renew_delegate_no": "",
+  "@map3_renew_delegate_no": {},
   "map3_renew_doing": "",
   "@map3_renew_doing": {},
+  "map3_renew_join": "",
+  "@map3_renew_join": {},
+  "map3_renew_next_period": "",
+  "@map3_renew_next_period": {},
+  "map3_renew_open": "",
+  "@map3_renew_open": {},
+  "map3_renew_setting_close": "",
+  "@map3_renew_setting_close": {},
+  "map3_renew_setting_expired": "",
+  "@map3_renew_setting_expired": {},
+  "map3_renew_setting_finished": "",
+  "@map3_renew_setting_finished": {},
+  "map3_renew_setting_no": "",
+  "@map3_renew_setting_no": {},
+  "map3_renew_setting_open": "",
+  "@map3_renew_setting_open": {},
+  "map3_renew_setting_pre": "",
+  "@map3_renew_setting_pre": {},
+  "map3_setting_epoch_left": "",
+  "@map3_setting_epoch_left": {},
+  "map3_setting_epoch_need": "",
+  "@map3_setting_epoch_need": {},
   "map3_un_re_delegate_doing": "",
   "@map3_un_re_delegate_doing": {},
   "map_contract_execution": "Execute Map3 contract",
@@ -1470,6 +1548,8 @@
   "@mapping": {},
   "map_provide_stable_server": "Serves stable and reliable map data to Hyperion MapChain",
   "@map_provide_stable_server": {},
+  "map_renew_setting_date_func": "请在纪元{periodEpoch7Add} ~ {releaseEpoch}内设置",
+  "@map_renew_setting_date_func": {},
   "map_smart_contract_management": "Manage Map3 smart contract",
   "@map_smart_contract_management": {},
   "max_fee_rate": "Max. fee",
@@ -2062,6 +2142,8 @@
   "@recovered_invested_capital": {},
   "redelegation_not_exist": "redelegation does not exist",
   "@redelegation_not_exist": {},
+  "red_pocket_invitation_together": "",
+  "@red_pocket_invitation_together": {},
   "refresh_keypaire_message": "Refreshing your public key address will fail to decrypt the received address, still continue to refresh?",
   "@refresh_keypaire_message": {},
   "refresh_public_key_days_tips": "Automatically refresh in %d days",
@@ -2130,6 +2212,52 @@
   "@rmb": {},
   "route": "Route",
   "@route": {},
+  "rp_airdrop": "",
+  "@rp_airdrop": {},
+  "rp_available_soon": "",
+  "@rp_available_soon": {},
+  "rp_balance": "",
+  "@rp_balance": {},
+  "rp_desc_1": "",
+  "@rp_desc_1": {},
+  "rp_desc_2": "",
+  "@rp_desc_2": {},
+  "rp_desc_3": "",
+  "@rp_desc_3": {},
+  "rp_desc_4": "",
+  "@rp_desc_4": {},
+  "rp_friends": "",
+  "@rp_friends": {},
+  "rp_global_hyn_staking": "",
+  "@rp_global_hyn_staking": {},
+  "rp_global_transmit": "",
+  "@rp_global_transmit": {},
+  "rp_hrc30": "",
+  "@rp_hrc30": {},
+  "rp_invite_to_collect": "",
+  "@rp_invite_to_collect": {},
+  "rp_missed": "",
+  "@rp_missed": {},
+  "rp_my_hyn_staking": "",
+  "@rp_my_hyn_staking": {},
+  "rp_not_airdrop_1": "not",
+  "@rp_not_airdrop_1": {},
+  "rp_not_airdrop_2": "airdrop",
+  "@rp_not_airdrop_2": {},
+  "rp_not_airdrop_3": "yet",
+  "@rp_not_airdrop_3": {},
+  "rp_project_intro": "",
+  "@rp_project_intro": {},
+  "rp_today_rp": "",
+  "@rp_today_rp": {},
+  "rp_total_amount_percent": "总量{percent}万RP",
+  "@rp_total_amount_percent": {},
+  "rp_transmit_pool": "",
+  "@rp_transmit_pool": {},
+  "rp_transmit_yesterday": "",
+  "@rp_transmit_yesterday": {},
+  "rp_yesterday_rp": "",
+  "@rp_yesterday_rp": {},
   "safety_certification_by_organizations": "Certified by authoritative institution",
   "@safety_certification_by_organizations": {},
   "safety_verification": "Safety Verification",
