--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -498,6 +498,8 @@
   "@create_wallet": {},
   "create_wallet_account_check_contract": "妳需要先創建/導入錢包賬戶，才能查看妳的錢包賬戶相關節點數據。",
   "@create_wallet_account_check_contract": {},
+  "create_wallet_auto_friend_create_now": "现在新建一个钱包身份，创建后将自动成为{walletName}的好友，现在就创建吗?",
+  "@create_wallet_auto_friend_create_now": {},
   "create_wallet_name_label": "錢包名稱",
   "@create_wallet_name_label": {},
   "create_wallet_password_label": "錢包密碼",
@@ -1202,8 +1204,14 @@
   "@invest_cant_undo": {},
   "invitation_code_error": "邀請碼錯誤",
   "@invitation_code_error": {},
+  "invitation_success": "",
+  "@invitation_success": {},
   "invite_friend_join": "邀請好友\n參加",
   "@invite_friend_join": {},
+  "invite_friend_receive_pocket_agree": "",
+  "@invite_friend_receive_pocket_agree": {},
+  "invite_friends": "",
+  "@invite_friends": {},
   "is_not_map3_operator": "非Map3创建人",
   "@is_not_map3_operator": {},
   "isnt_trustwallet_cant_export": "不是TrustWallet錢包，不支持導出助記詞",
@@ -1380,6 +1388,8 @@
   "@map3_create_min_staking": {},
   "map3_creator_delegation_too_small": "Map3创建者抵押金额太低",
   "@map3_creator_delegation_too_small": {},
+  "map3_current_reward": "",
+  "@map3_current_reward": {},
   "map3_delegate_amount_hint": "需要总抵押满{startMin}HYN才能正式启动，每次参与抵押数额不少于{delegateMin}HYN",
   "@map3_delegate_amount_hint": {},
   "map3_delegate_doing": "抵押{amount}HYN请求处理中...",
@@ -1404,6 +1414,10 @@
   "@map3_introduction": {},
   "map3_is_mortgaged": "Map3已抵押",
   "@map3_is_mortgaged": {},
+  "map3_join_delegate_address_is_empty_hint": "",
+  "@map3_join_delegate_address_is_empty_hint": {},
+  "map3_join_total_count": "共 {length}个",
+  "@map3_join_total_count": {},
   "map3_main_page_title": "Map3地圖服務節點",
   "@map3_main_page_title": {},
   "map3_manage_fee_rule": "管理费的设置根据抵押量来决定，抵押量越高管理费的最大值越高，(计算公式为：个人抵押量 / {amount} x 100%）管理费最高不高于{feeMax}%",
@@ -1414,18 +1428,50 @@
   "@map3_node": {},
   "map3_node_already_restaked": "Map3节点已经复抵押",
   "@map3_node_already_restaked": {},
+  "map3_node_cancel_staking": "",
+  "@map3_node_cancel_staking": {},
+  "map3_node_delegate": "",
+  "@map3_node_delegate": {},
+  "map3_node_device": "",
+  "@map3_node_device": {},
+  "map3_node_edit": "",
+  "@map3_node_edit": {},
+  "map3_node_exit": "",
+  "@map3_node_exit": {},
   "map3_node_identity_exists": "Map3节点号已存在",
   "@map3_node_identity_exists": {},
   "map3_node_introduction": "MAP3",
   "@map3_node_introduction": {},
   "map3_node_key_exists": "Map3节点BLS KEY已存在",
   "@map3_node_key_exists": {},
+  "map3_node_no_action_hint": "",
+  "@map3_node_no_action_hint": {},
   "map3_node_no_exist": "Map3节点不存在",
   "@map3_node_no_exist": {},
+  "map3_node_notification": "",
+  "@map3_node_notification": {},
+  "map3_node_notification_default": "",
+  "@map3_node_notification_default": {},
+  "map3_node_progress": "",
+  "@map3_node_progress": {},
+  "map3_node_record_is_empty": "",
+  "@map3_node_record_is_empty": {},
+  "map3_node_re_staking_hint": "",
+  "@map3_node_re_staking_hint": {},
+  "map3_node_re_staking_ing": "",
+  "@map3_node_re_staking_ing": {},
+  "map3_node_re_staking_title": "",
+  "@map3_node_re_staking_title": {},
   "map3_nodes": "Map3地圖服務節點",
   "@map3_nodes": {},
+  "map3_node_service": "",
+  "@map3_node_service": {},
+  "map3_node_setting_now": "",
+  "@map3_node_setting_now": {},
   "map3_nodes_v1": "Map3節點（v1.0）",
   "@map3_nodes_v1": {},
+  "map3_node_un_staking": "",
+  "@map3_node_un_staking": {},
   "map3_notification_expired": "",
   "@map3_notification_expired": {},
   "map3_notification_expired_left_epoch": "距离到期还需{endRemainEpochValue}纪元",
@@ -1446,8 +1492,40 @@
   "@map3_re_delegate_doing": {},
   "map3_refresh_data": "",
   "@map3_refresh_data": {},
+  "map3_renew": "",
+  "@map3_renew": {},
+  "map3_renew_auto": "",
+  "@map3_renew_auto": {},
+  "map3_renew_content_creator": "",
+  "@map3_renew_content_creator": {},
+  "map3_renew_content_joiner": "",
+  "@map3_renew_content_joiner": {},
+  "map3_renew_delegate_no": "",
+  "@map3_renew_delegate_no": {},
   "map3_renew_doing": "",
   "@map3_renew_doing": {},
+  "map3_renew_join": "",
+  "@map3_renew_join": {},
+  "map3_renew_next_period": "",
+  "@map3_renew_next_period": {},
+  "map3_renew_open": "",
+  "@map3_renew_open": {},
+  "map3_renew_setting_close": "",
+  "@map3_renew_setting_close": {},
+  "map3_renew_setting_expired": "",
+  "@map3_renew_setting_expired": {},
+  "map3_renew_setting_finished": "",
+  "@map3_renew_setting_finished": {},
+  "map3_renew_setting_no": "",
+  "@map3_renew_setting_no": {},
+  "map3_renew_setting_open": "",
+  "@map3_renew_setting_open": {},
+  "map3_renew_setting_pre": "",
+  "@map3_renew_setting_pre": {},
+  "map3_setting_epoch_left": "",
+  "@map3_setting_epoch_left": {},
+  "map3_setting_epoch_need": "",
+  "@map3_setting_epoch_need": {},
   "map3_un_re_delegate_doing": "",
   "@map3_un_re_delegate_doing": {},
   "map_contract_execution": "MAP3合約調用",
@@ -1470,6 +1548,8 @@
   "@mapping": {},
   "map_provide_stable_server": "為海伯利安地圖提供穩定可靠的地圖服務",
   "@map_provide_stable_server": {},
+  "map_renew_setting_date_func": "请在纪元{periodEpoch7Add} ~ {releaseEpoch}内设置",
+  "@map_renew_setting_date_func": {},
   "map_smart_contract_management": "map3智能合約管理",
   "@map_smart_contract_management": {},
   "max_fee_rate": "最大费率",
@@ -2062,6 +2142,8 @@
   "@recovered_invested_capital": {},
   "redelegation_not_exist": "复抵押不存在",
   "@redelegation_not_exist": {},
+  "red_pocket_invitation_together": "",
+  "@red_pocket_invitation_together": {},
   "refresh_keypaire_message": "刷新公鑰地址後，之前的接收的位置密文將永久解密不了！確定繼續刷新嗎？",
   "@refresh_keypaire_message": {},
   "refresh_public_key_days_tips": "%d天後自動刷新",
@@ -2130,6 +2212,52 @@
   "@rmb": {},
   "route": "路線",
   "@route": {},
+  "rp_airdrop": "",
+  "@rp_airdrop": {},
+  "rp_available_soon": "",
+  "@rp_available_soon": {},
+  "rp_balance": "",
+  "@rp_balance": {},
+  "rp_desc_1": "",
+  "@rp_desc_1": {},
+  "rp_desc_2": "",
+  "@rp_desc_2": {},
+  "rp_desc_3": "",
+  "@rp_desc_3": {},
+  "rp_desc_4": "",
+  "@rp_desc_4": {},
+  "rp_friends": "",
+  "@rp_friends": {},
+  "rp_global_hyn_staking": "",
+  "@rp_global_hyn_staking": {},
+  "rp_global_transmit": "",
+  "@rp_global_transmit": {},
+  "rp_hrc30": "",
+  "@rp_hrc30": {},
+  "rp_invite_to_collect": "",
+  "@rp_invite_to_collect": {},
+  "rp_missed": "",
+  "@rp_missed": {},
+  "rp_my_hyn_staking": "",
+  "@rp_my_hyn_staking": {},
+  "rp_not_airdrop_1": "",
+  "@rp_not_airdrop_1": {},
+  "rp_not_airdrop_2": "",
+  "@rp_not_airdrop_2": {},
+  "rp_not_airdrop_3": "",
+  "@rp_not_airdrop_3": {},
+  "rp_project_intro": "",
+  "@rp_project_intro": {},
+  "rp_today_rp": "",
+  "@rp_today_rp": {},
+  "rp_total_amount_percent": "总量{percent}万RP",
+  "@rp_total_amount_percent": {},
+  "rp_transmit_pool": "",
+  "@rp_transmit_pool": {},
+  "rp_transmit_yesterday": "",
+  "@rp_transmit_yesterday": {},
+  "rp_yesterday_rp": "",
+  "@rp_yesterday_rp": {},
   "safety_certification_by_organizations": "經過權威機構安全認證",
   "@safety_certification_by_organizations": {},
   "safety_verification": "安全驗證",
