【Add】add rp miners

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -498,6 +498,8 @@
   "@create_wallet": {},
   "create_wallet_account_check_contract": "당신은 지갑 계정 새로 만들기/가져오기를 우선적으로 해야만이 지갑 계정과 관련된 노드 데이터를 찾아볼수 있습니다.",
   "@create_wallet_account_check_contract": {},
+  "create_wallet_auto_friend_create_now": "现在新建一个钱包身份，创建后将自动成为{walletName}的好友，现在就创建吗?",
+  "@create_wallet_auto_friend_create_now": {},
   "create_wallet_name_label": "비공개 개인 지갑 명칭 만들기",
   "@create_wallet_name_label": {},
   "create_wallet_password_label": "지갑 비밀번호 만들기",
@@ -1202,8 +1204,14 @@
   "@invest_cant_undo": {},
   "invitation_code_error": "초대 코드 오류",
   "@invitation_code_error": {},
+  "invitation_success": "",
+  "@invitation_success": {},
   "invite_friend_join": "참가할 친구 초대",
   "@invite_friend_join": {},
+  "invite_friend_receive_pocket_agree": "",
+  "@invite_friend_receive_pocket_agree": {},
+  "invite_friends": "",
+  "@invite_friends": {},
   "is_not_map3_operator": "非Map3创建人",
   "@is_not_map3_operator": {},
   "isnt_trustwallet_cant_export": "TrustWallet 지갑이 아니므로 도움말 가져오기를 지원할수 없습니다.",
@@ -1380,6 +1388,8 @@
   "@map3_create_min_staking": {},
   "map3_creator_delegation_too_small": "Map3创建者抵押金额太低",
   "@map3_creator_delegation_too_small": {},
+  "map3_current_reward": "",
+  "@map3_current_reward": {},
   "map3_delegate_amount_hint": " {startMin}HYN are required before initiating. Each delegation is not less{delegateMin}HYN",
   "@map3_delegate_amount_hint": {},
   "map3_delegate_doing": "抵押{amount}HYN请求处理中...",
@@ -1404,6 +1414,10 @@
   "@map3_introduction": {},
   "map3_is_mortgaged": "Map3已抵押",
   "@map3_is_mortgaged": {},
+  "map3_join_delegate_address_is_empty_hint": "",
+  "@map3_join_delegate_address_is_empty_hint": {},
+  "map3_join_total_count": "共 {length}个",
+  "@map3_join_total_count": {},
   "map3_main_page_title": "Map3 nodes",
   "@map3_main_page_title": {},
   "map3_manage_fee_rule": "Commission is pro rata to the amount of delegation(delegation / {amount} x 100%）commission is not higher than{feeMax}%",
@@ -1414,18 +1428,50 @@
   "@map3_node": {},
   "map3_node_already_restaked": "Map3节点已经复抵押",
   "@map3_node_already_restaked": {},
+  "map3_node_cancel_staking": "",
+  "@map3_node_cancel_staking": {},
+  "map3_node_delegate": "",
+  "@map3_node_delegate": {},
+  "map3_node_device": "",
+  "@map3_node_device": {},
+  "map3_node_edit": "",
+  "@map3_node_edit": {},
+  "map3_node_exit": "",
+  "@map3_node_exit": {},
   "map3_node_identity_exists": "Map3节点号已存在",
   "@map3_node_identity_exists": {},
   "map3_node_introduction": "Map3 노드 소개",
   "@map3_node_introduction": {},
   "map3_node_key_exists": "Map3节点BLS KEY已存在",
   "@map3_node_key_exists": {},
+  "map3_node_no_action_hint": "",
+  "@map3_node_no_action_hint": {},
   "map3_node_no_exist": "Map3节点不存在",
   "@map3_node_no_exist": {},
+  "map3_node_notification": "",
+  "@map3_node_notification": {},
+  "map3_node_notification_default": "",
+  "@map3_node_notification_default": {},
+  "map3_node_progress": "",
+  "@map3_node_progress": {},
+  "map3_node_record_is_empty": "",
+  "@map3_node_record_is_empty": {},
+  "map3_node_re_staking_hint": "",
+  "@map3_node_re_staking_hint": {},
+  "map3_node_re_staking_ing": "",
+  "@map3_node_re_staking_ing": {},
+  "map3_node_re_staking_title": "",
+  "@map3_node_re_staking_title": {},
   "map3_nodes": "Map3 nodes",
   "@map3_nodes": {},
+  "map3_node_service": "",
+  "@map3_node_service": {},
+  "map3_node_setting_now": "",
+  "@map3_node_setting_now": {},
   "map3_nodes_v1": "Map3 node（v1.0）",
   "@map3_nodes_v1": {},
+  "map3_node_un_staking": "",
+  "@map3_node_un_staking": {},
   "map3_notification_expired": "",
   "@map3_notification_expired": {},
   "map3_notification_expired_left_epoch": "距离到期还需{endRemainEpochValue}纪元",
@@ -1446,8 +1492,40 @@
   "@map3_re_delegate_doing": {},
   "map3_refresh_data": "",
   "@map3_refresh_data": {},
+  "map3_renew": "",
+  "@map3_renew": {},
+  "map3_renew_auto": "",
+  "@map3_renew_auto": {},
+  "map3_renew_content_creator": "",
+  "@map3_renew_content_creator": {},
+  "map3_renew_content_joiner": "",
+  "@map3_renew_content_joiner": {},
+  "map3_renew_delegate_no": "",
+  "@map3_renew_delegate_no": {},
   "map3_renew_doing": "",
   "@map3_renew_doing": {},
+  "map3_renew_join": "",
+  "@map3_renew_join": {},
+  "map3_renew_next_period": "",
+  "@map3_renew_next_period": {},
+  "map3_renew_open": "",
+  "@map3_renew_open": {},
+  "map3_renew_setting_close": "",
+  "@map3_renew_setting_close": {},
+  "map3_renew_setting_expired": "",
+  "@map3_renew_setting_expired": {},
+  "map3_renew_setting_finished": "",
+  "@map3_renew_setting_finished": {},
+  "map3_renew_setting_no": "",
+  "@map3_renew_setting_no": {},
+  "map3_renew_setting_open": "",
+  "@map3_renew_setting_open": {},
+  "map3_renew_setting_pre": "",
+  "@map3_renew_setting_pre": {},
+  "map3_setting_epoch_left": "",
+  "@map3_setting_epoch_left": {},
+  "map3_setting_epoch_need": "",
+  "@map3_setting_epoch_need": {},
   "map3_un_re_delegate_doing": "",
   "@map3_un_re_delegate_doing": {},
   "map_contract_execution": "MAP3 계약 전용",
@@ -1470,6 +1548,8 @@
   "@mapping": {},
   "map_provide_stable_server": "하이페리온은 안정적이고 신뢰할 수 있는 지도 서비스를 제공합니다",
   "@map_provide_stable_server": {},
+  "map_renew_setting_date_func": "请在纪元{periodEpoch7Add} ~ {releaseEpoch}内设置",
+  "@map_renew_setting_date_func": {},
   "map_smart_contract_management": "MAP3 스마트 계약 관리",
   "@map_smart_contract_management": {},
   "max_fee_rate": "最大费率",
@@ -2062,6 +2142,8 @@
   "@recovered_invested_capital": {},
   "redelegation_not_exist": "复抵押不存在",
   "@redelegation_not_exist": {},
+  "red_pocket_invitation_together": "",
+  "@red_pocket_invitation_together": {},
   "refresh_keypaire_message": "공유 키 주소를 새로 고침 하면  이전에 받았던 위치의 암호화 문서는 영구적으로 복구 되지 않습니다!  새로 고침을 계속 하시겠습니까? ",
   "@refresh_keypaire_message": {},
   "refresh_public_key_days_tips": "%d 후 자동 새로 고침",
@@ -2130,6 +2212,46 @@
   "@rmb": {},
   "route": "루트",
   "@route": {},
+  "rp_airdrop": "",
+  "@rp_airdrop": {},
+  "rp_available_soon": "",
+  "@rp_available_soon": {},
+  "rp_balance": "",
+  "@rp_balance": {},
+  "rp_desc_1": "",
+  "@rp_desc_1": {},
+  "rp_desc_2": "",
+  "@rp_desc_2": {},
+  "rp_desc_3": "",
+  "@rp_desc_3": {},
+  "rp_desc_4": "",
+  "@rp_desc_4": {},
+  "rp_friends": "",
+  "@rp_friends": {},
+  "rp_global_hyn_staking": "",
+  "@rp_global_hyn_staking": {},
+  "rp_global_transmit": "",
+  "@rp_global_transmit": {},
+  "rp_hrc30": "",
+  "@rp_hrc30": {},
+  "rp_invite_to_collect": "",
+  "@rp_invite_to_collect": {},
+  "rp_missed": "",
+  "@rp_missed": {},
+  "rp_my_hyn_staking": "",
+  "@rp_my_hyn_staking": {},
+  "rp_project_intro": "",
+  "@rp_project_intro": {},
+  "rp_today_rp": "",
+  "@rp_today_rp": {},
+  "rp_total_amount_percent": "总量{percent}万RP",
+  "@rp_total_amount_percent": {},
+  "rp_transmit_pool": "",
+  "@rp_transmit_pool": {},
+  "rp_transmit_yesterday": "",
+  "@rp_transmit_yesterday": {},
+  "rp_yesterday_rp": "",
+  "@rp_yesterday_rp": {},
   "safety_certification_by_organizations": "권위 기구의 안전 인증을 받았습니다.",
   "@safety_certification_by_organizations": {},
   "safety_verification": "안전 인증",
