--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -498,6 +498,8 @@
   "@create_wallet": {},
   "create_wallet_account_check_contract": "你需要先创建/导入钱包账户，才能查看你的钱包账户相关节点数据。",
   "@create_wallet_account_check_contract": {},
+  "create_wallet_auto_friend_create_now": "现在新建一个钱包身份，创建后将自动成为{walletName}的好友，现在就创建吗?",
+  "@create_wallet_auto_friend_create_now": {},
   "create_wallet_name_label": "钱包名称",
   "@create_wallet_name_label": {},
   "create_wallet_password_label": "钱包密码",
@@ -1202,8 +1204,14 @@
   "@invest_cant_undo": {},
   "invitation_code_error": "邀请码错误",
   "@invitation_code_error": {},
+  "invitation_success": "邀请成功",
+  "@invitation_success": {},
   "invite_friend_join": "邀请好友\n参加",
   "@invite_friend_join": {},
+  "invite_friend_receive_pocket_agree": "邀请你成为他的好友并一起领红包，是否同意?",
+  "@invite_friend_receive_pocket_agree": {},
+  "invite_friends": "邀请好友",
+  "@invite_friends": {},
   "is_not_map3_operator": "非Map3创建人",
   "@is_not_map3_operator": {},
   "isnt_trustwallet_cant_export": "不是TrustWallet钱包，不支持导出助记词",
@@ -1380,6 +1388,8 @@
   "@map3_create_min_staking": {},
   "map3_creator_delegation_too_small": "Map3创建者抵押金额太低",
   "@map3_creator_delegation_too_small": {},
+  "map3_current_reward": "可提奖励",
+  "@map3_current_reward": {},
   "map3_delegate_amount_hint": "需要总抵押满{startMin}HYN才能正式启动，每次参与抵押数额不少于{delegateMin}HYN",
   "@map3_delegate_amount_hint": {},
   "map3_delegate_doing": "抵押{amount}HYN请求处理中...",
@@ -1404,6 +1414,10 @@
   "@map3_introduction": {},
   "map3_is_mortgaged": "Map3已抵押",
   "@map3_is_mortgaged": {},
+  "map3_join_delegate_address_is_empty_hint": "参与地址为空",
+  "@map3_join_delegate_address_is_empty_hint": {},
+  "map3_join_total_count": "共 {length}个",
+  "@map3_join_total_count": {},
   "map3_main_page_title": "Map3地图服务节点",
   "@map3_main_page_title": {},
   "map3_manage_fee_rule": "管理费的设置根据抵押量来决定，抵押量越高管理费的最大值越高，(计算公式为：个人抵押量 / {amount} x 100%）管理费最高不高于{feeMax}%",
@@ -1414,18 +1428,50 @@
   "@map3_node": {},
   "map3_node_already_restaked": "Map3节点已经复抵押",
   "@map3_node_already_restaked": {},
+  "map3_node_cancel_staking": "部分撤销",
+  "@map3_node_cancel_staking": {},
+  "map3_node_delegate": "抵押",
+  "@map3_node_delegate": {},
+  "map3_node_device": "设备",
+  "@map3_node_device": {},
+  "map3_node_edit": "编辑节点",
+  "@map3_node_edit": {},
+  "map3_node_exit": "终止",
+  "@map3_node_exit": {},
   "map3_node_identity_exists": "Map3节点号已存在",
   "@map3_node_identity_exists": {},
   "map3_node_introduction": "Map3",
   "@map3_node_introduction": {},
   "map3_node_key_exists": "Map3节点BLS KEY已存在",
   "@map3_node_key_exists": {},
+  "map3_node_no_action_hint": "你无需任何操作",
+  "@map3_node_no_action_hint": {},
   "map3_node_no_exist": "Map3节点不存在",
   "@map3_node_no_exist": {},
+  "map3_node_notification": "节点公告",
+  "@map3_node_notification": {},
+  "map3_node_notification_default": "大家快来参与我的节点吧，人帅靠谱，光干活不说话，奖励稳定，服务周到！",
+  "@map3_node_notification_default": {},
+  "map3_node_progress": "节点进度",
+  "@map3_node_progress": {},
+  "map3_node_record_is_empty": "节点记录为空",
+  "@map3_node_record_is_empty": {},
+  "map3_node_re_staking_hint": "尚未复投Atlas节点，请节点主尽快复投Atlas节点以获得出块奖励",
+  "@map3_node_re_staking_hint": {},
+  "map3_node_re_staking_ing": "正在复投Atlas共识节点",
+  "@map3_node_re_staking_ing": {},
+  "map3_node_re_staking_title": "复投Atlas节点",
+  "@map3_node_re_staking_title": {},
   "map3_nodes": "Map3地图服务节点",
   "@map3_nodes": {},
+  "map3_node_service": "节点服务",
+  "@map3_node_service": {},
+  "map3_node_setting_now": "马上设置",
+  "@map3_node_setting_now": {},
   "map3_nodes_v1": "Map3节点（v1.0）",
   "@map3_nodes_v1": {},
+  "map3_node_un_staking": "未抵押",
+  "@map3_node_un_staking": {},
   "map3_notification_expired": "节点主已经停止续约，该节点到期后自动终止",
   "@map3_notification_expired": {},
   "map3_notification_expired_left_epoch": "距离到期还需{endRemainEpochValue}纪元",
@@ -1446,8 +1492,40 @@
   "@map3_re_delegate_doing": {},
   "map3_refresh_data": "数据刷新中...",
   "@map3_refresh_data": {},
+  "map3_renew": "续期",
+  "@map3_renew": {},
+  "map3_renew_auto": "自动续期",
+  "@map3_renew_auto": {},
+  "map3_renew_content_creator": "请你设置下期预设是否自动续约。如果过期不设置，节点将在到期后自动续约",
+  "@map3_renew_content_creator": {},
+  "map3_renew_content_joiner": "节点主已经设置下期自动续约，请你设置下期是否跟随续约。如果过期不设置，节点将在到期后自动跟随续约。",
+  "@map3_renew_content_joiner": {},
+  "map3_renew_delegate_no": "未参与抵押，不能设置",
+  "@map3_renew_delegate_no": {},
   "map3_renew_doing": "续约请求处理中...",
   "@map3_renew_doing": {},
+  "map3_renew_join": "跟随续期",
+  "@map3_renew_join": {},
+  "map3_renew_next_period": "下期预设",
+  "@map3_renew_next_period": {},
+  "map3_renew_open": "已开启",
+  "@map3_renew_open": {},
+  "map3_renew_setting_close": "已关闭，到期后停止续期",
+  "@map3_renew_setting_close": {},
+  "map3_renew_setting_expired": "设置期已过，到期后默认续期",
+  "@map3_renew_setting_expired": {},
+  "map3_renew_setting_finished": "设置完成",
+  "@map3_renew_setting_finished": {},
+  "map3_renew_setting_no": "未设置，到期后将默认续期",
+  "@map3_renew_setting_no": {},
+  "map3_renew_setting_open": "已开启，到期后自动续期",
+  "@map3_renew_setting_open": {},
+  "map3_renew_setting_pre": "请在节点到期前设置",
+  "@map3_renew_setting_pre": {},
+  "map3_setting_epoch_left": "剩余可设置只有",
+  "@map3_setting_epoch_left": {},
+  "map3_setting_epoch_need": "距离可设置还需",
+  "@map3_setting_epoch_need": {},
   "map3_un_re_delegate_doing": "取消复抵押请求处理中...",
   "@map3_un_re_delegate_doing": {},
   "map_contract_execution": "MAP3合约调用",
@@ -1470,6 +1548,8 @@
   "@mapping": {},
   "map_provide_stable_server": "为海伯利安地图提供稳定可靠的地图服务",
   "@map_provide_stable_server": {},
+  "map_renew_setting_date_func": "请在纪元{periodEpoch7Add} ~ {releaseEpoch}内设置",
+  "@map_renew_setting_date_func": {},
   "map_smart_contract_management": "map3智能合约管理",
   "@map_smart_contract_management": {},
   "max_fee_rate": "最大费率",
@@ -2062,6 +2142,8 @@
   "@recovered_invested_capital": {},
   "redelegation_not_exist": "复抵押不存在",
   "@redelegation_not_exist": {},
+  "red_pocket_invitation_together": "一起领红包邀请",
+  "@red_pocket_invitation_together": {},
   "refresh_keypaire_message": "刷新公钥地址后，之前的接收的位置密文将永久解密不了！确定继续刷新吗？",
   "@refresh_keypaire_message": {},
   "refresh_public_key_days_tips": "%d天后自动刷新",
@@ -2130,6 +2212,46 @@
   "@rmb": {},
   "route": "路线",
   "@route": {},
+  "rp_airdrop": "红包空投",
+  "@rp_airdrop": {},
+  "rp_available_soon": "即将上线",
+  "@rp_available_soon": {},
+  "rp_balance": "余额",
+  "@rp_balance": {},
+  "rp_desc_1": "首个基于可信地图位置+HRC30去中心化交易结构的去中心化应用场景",
+  "@rp_desc_1": {},
+  "rp_desc_2": "用户只需抵押HYN即可体验去中心化抢红包，与朋友圈共同分享RP",
+  "@rp_desc_2": {},
+  "rp_desc_3": "越早加入，收获越多，更有隐藏红包福利等你来解锁！",
+  "@rp_desc_3": {},
+  "rp_desc_4": "RP总发行量为100万枚，在红包HRC30智能合约内进行传导和空投，无预挖，无预售。",
+  "@rp_desc_4": {},
+  "rp_friends": "朋友圈",
+  "@rp_friends": {},
+  "rp_global_hyn_staking": "全网抵押",
+  "@rp_global_hyn_staking": {},
+  "rp_global_transmit": "全网累计传导",
+  "@rp_global_transmit": {},
+  "rp_hrc30": "红包 HRC30",
+  "@rp_hrc30": {},
+  "rp_invite_to_collect": "邀请好友一起领红包",
+  "@rp_invite_to_collect": {},
+  "rp_missed": "我错过的",
+  "@rp_missed": {},
+  "rp_my_hyn_staking": "我的抵押",
+  "@rp_my_hyn_staking": {},
+  "rp_project_intro": "项目简介",
+  "@rp_project_intro": {},
+  "rp_today_rp": "今日红包",
+  "@rp_today_rp": {},
+  "rp_total_amount_percent": "总量{percent}万RP",
+  "@rp_total_amount_percent": {},
+  "rp_transmit_pool": "传导池",
+  "@rp_transmit_pool": {},
+  "rp_transmit_yesterday": "昨日获得",
+  "@rp_transmit_yesterday": {},
+  "rp_yesterday_rp": "昨日红包",
+  "@rp_yesterday_rp": {},
   "safety_certification_by_organizations": "经过权威机构安全认证",
   "@safety_certification_by_organizations": {},
   "safety_verification": "安全验证",
