[rp]: update friends page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -104,6 +104,8 @@
   "@agree": {},
   "agree_and_continue": "Agree and continue",
   "@agree_and_continue": {},
+  "agreed_invitation_cannot_invite_again": "",
+  "@agreed_invitation_cannot_invite_again": {},
   "all": "ALL",
   "@all": {},
   "all_bug": "All in",
@@ -2234,12 +2236,16 @@
   "@rp_global_transmit": {},
   "rp_hrc30": "",
   "@rp_hrc30": {},
+  "rp_invite_me": "",
+  "@rp_invite_me": {},
   "rp_invite_to_collect": "",
   "@rp_invite_to_collect": {},
   "rp_missed": "",
   "@rp_missed": {},
   "rp_my_hyn_staking": "",
   "@rp_my_hyn_staking": {},
+  "rp_my_invite_list": "",
+  "@rp_my_invite_list": {},
   "rp_not_airdrop_1": "not",
   "@rp_not_airdrop_1": {},
   "rp_not_airdrop_2": "airdrop",
