--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -104,6 +104,8 @@
   "@agree": {},
   "agree_and_continue": "同意并继续",
   "@agree_and_continue": {},
+  "agreed_invitation_cannot_invite_again": "你已经接受过邀请了，不能重复接受邀请",
+  "@agreed_invitation_cannot_invite_again": {},
   "all": "全部",
   "@all": {},
   "all_bug": "全部买入",
@@ -2234,12 +2236,16 @@
   "@rp_global_transmit": {},
   "rp_hrc30": "红包 HRC30",
   "@rp_hrc30": {},
+  "rp_invite_me": "邀请我",
+  "@rp_invite_me": {},
   "rp_invite_to_collect": "邀请好友一起领红包",
   "@rp_invite_to_collect": {},
   "rp_missed": "我错过的",
   "@rp_missed": {},
   "rp_my_hyn_staking": "我的抵押",
   "@rp_my_hyn_staking": {},
+  "rp_my_invite_list": "我邀请的好友",
+  "@rp_my_invite_list": {},
   "rp_not_airdrop_1": "未",
   "@rp_not_airdrop_1": {},
   "rp_not_airdrop_2": "空",
